--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
-          GITHUB_TOKEN: ${{ secrets.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 }}
+          GITHUB_TOKEN: ${{ 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 }}
           USERNAME: ${{ github.marcycode }}
       - name: Commit & Push
         run: |
